update grabber json output

--- a/Datasets/OpenSubtitles/grabber.ipynb
+++ b/Datasets/OpenSubtitles/grabber.ipynb
@@ -44,8 +44,8 @@
     "    'histogramCutoff' : 80,\n",
     "    'maxSequenceLength' : 40,\n",
     "    'trainRatio' : 0.9,\n",
-    "    'paramsJSONLocation' : 'subtitles_parameters.json',\n",
-    "    \"datasetFile\" : 'dataset_ready.pkl',\n",
+    "    'paramsJSONLocation' : '../Datasets/OpenSubtitles/dataset_parameters.json',\n",
+    "    \"datasetFile\" : '../Datasets/OpenSubtitles/dataset_ready.pkl',\n",
     "    'saveDataset' : True,\n",
     "    \"example_item_id\" : 19,\n",
     "}"
@@ -329,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1539/1539 [00:00<00:00, 3693.06it/s]\n"
+      "100%|██████████| 1539/1539 [00:00<00:00, 3855.33it/s]\n"
      ]
     }
    ],
@@ -391,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1539/1539 [00:02<00:00, 532.43it/s]\n"
+      "100%|██████████| 1539/1539 [00:02<00:00, 520.69it/s]\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1539/1539 [00:04<00:00, 366.28it/s]\n"
+      "100%|██████████| 1539/1539 [00:05<00:00, 297.56it/s]\n"
      ]
     }
    ],
@@ -564,7 +564,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1539/1539 [00:03<00:00, 405.35it/s]\n"
+      "100%|██████████| 1539/1539 [00:04<00:00, 384.23it/s]\n"
      ]
     }
    ],
@@ -584,7 +584,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1539/1539 [00:01<00:00, 817.34it/s]\n"
+      "100%|██████████| 1539/1539 [00:01<00:00, 873.95it/s]\n"
      ]
     }
    ],
@@ -669,7 +669,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1539/1539 [00:03<00:00, 469.85it/s]\n"
+      "100%|██████████| 1539/1539 [00:03<00:00, 400.16it/s]\n"
      ]
     }
    ],
@@ -687,7 +687,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1539/1539 [00:00<00:00, 63551.31it/s]\n"
+      "100%|██████████| 1539/1539 [00:00<00:00, 64612.37it/s]\n"
      ]
     }
    ],
@@ -727,7 +727,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1771082/1771082 [00:01<00:00, 1060917.20it/s]\n"
+      "100%|██████████| 1771082/1771082 [00:01<00:00, 1110892.22it/s]\n"
      ]
     }
    ],
@@ -771,7 +771,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1473881/1473881 [00:00<00:00, 2081038.18it/s]\n"
+      "100%|██████████| 1473881/1473881 [00:00<00:00, 1972558.29it/s]\n"
      ]
     }
    ],
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -910,8 +910,8 @@
      "output_type": "stream",
      "text": [
       "Saved! 64.6 MB\n",
-      "Save location: dataset_ready.pkl\n",
-      "dataset parameters save location: subtitles_parameters.json\n"
+      "Save location: ../Datasets/OpenSubtitles/dataset_ready.pkl\n",
+      "dataset parameters save location: ../Datasets/OpenSubtitles/dataset_parameters.json\n"
      ]
     }
    ],
@@ -927,19 +927,27 @@
     "\n",
     "if params['saveDataset']:\n",
     "    # save the dataset to a pickle file.\n",
-    "    output = open(params['datasetFile'], 'wb')\n",
+    "    saveplace = params['datasetFile'].split(\"/\")\n",
+    "    output = open(saveplace[-1], 'wb')\n",
     "    pickle.dump(container, output)\n",
     "    output.close()\n",
     "\n",
     "    # save dataset preprocessing parameters\n",
     "    params['example_filtering'] = examples\n",
-    "    with open(params['paramsJSONLocation'], 'w') as outfile:\n",
+    "    with open(params['paramsJSONLocation'].split(\"/\")[-1], 'w') as outfile:\n",
     "        json.dump(params, outfile)\n",
     "\n",
-    "    print(\"Saved!\", convert_bytes(os.stat(params['datasetFile']).st_size))\n",
+    "    print(\"Saved!\", convert_bytes(os.stat(saveplace[-1]).st_size))\n",
     "    print(\"Save location:\", params['datasetFile'])\n",
     "    print(\"dataset parameters save location:\", params['paramsJSONLocation'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
