--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -530,3 +530,97 @@
 	author = {Loper, Ewan Klein, Edward, Steven Bird},
 	file = {Snapshot:/Users/t/Zotero/storage/LWFICYPQ/9780596516499.html:text/html}
 }
+
+@inproceedings{he_ups_2016-1,
+	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
+	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
+	isbn = {978-1-4503-4143-1},
+	shorttitle = {Ups and {Downs}},
+	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
+	doi = {10.1145/2872427.2883037},
+	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
+	language = {en},
+	urldate = {2019-04-15},
+	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
+	publisher = {ACM Press},
+	author = {He, Ruining and McAuley, Julian},
+	year = {2016},
+	pages = {507--517},
+	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/V5VDVX44/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
+}
+
+@inproceedings{he_ups_2016-2,
+	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
+	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
+	isbn = {978-1-4503-4143-1},
+	shorttitle = {Ups and {Downs}},
+	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
+	doi = {10.1145/2872427.2883037},
+	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
+	language = {en},
+	urldate = {2019-04-15},
+	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
+	publisher = {ACM Press},
+	author = {He, Ruining and McAuley, Julian},
+	year = {2016},
+	pages = {507--517},
+	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/BT8LC864/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
+}
+
+@inproceedings{he_ups_2016-3,
+	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
+	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
+	isbn = {978-1-4503-4143-1},
+	shorttitle = {Ups and {Downs}},
+	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
+	doi = {10.1145/2872427.2883037},
+	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
+	language = {en},
+	urldate = {2019-04-15},
+	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
+	publisher = {ACM Press},
+	author = {He, Ruining and McAuley, Julian},
+	year = {2016},
+	pages = {507--517},
+	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/ZPIPSRI9/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
+}
+
+@article{lison_opensubtitles2016:_2016,
+	title = {{OpenSubtitles}2016: {Extracting} {Large} {Parallel} {Corpora} from {Movie} and {TV} {Subtitles}},
+	abstract = {We present a new major release of the OpenSubtitles collection of parallel corpora. The release is compiled from a large database of movie and TV subtitles and includes a total of 1689 bitexts spanning 2.6 billion sentences across 60 languages. The release also incorporates a number of enhancements in the preprocessing and alignment of the subtitles, such as the automatic correction of OCR errors and the use of meta-data to estimate the quality of each subtitle and score subtitle pairs.},
+	language = {en},
+	author = {Lison, Pierre and Tiedemann, Jorg},
+	year = {2016},
+	pages = {7},
+	file = {Lison and Tiedemann - OpenSubtitles2016 Extracting Large Parallel Corpo.pdf:/Users/t/Zotero/storage/S3E2FQCQ/Lison and Tiedemann - OpenSubtitles2016 Extracting Large Parallel Corpo.pdf:application/pdf}
+}
+
+@article{marcus_building_2002,
+	title = {Building a {Large} {Annotated} {Corpus} of {English}: {The} {Penn} {Treebank}},
+	volume = {19},
+	shorttitle = {Building a {Large} {Annotated} {Corpus} of {English}},
+	abstract = {The abstract for this document is available on CSA Illumina.To view the Abstract, click the Abstract button above the document title.},
+	journal = {Computational Linguistics},
+	author = {Marcus, Mitchell and Ann Marcinkiewicz, Mary and Santorini, Beatrice},
+	month = jul,
+	year = {2002},
+	pages = {313--330},
+	file = {Full Text PDF:/Users/t/Zotero/storage/RFQD4XIN/Marcus et al. - 2002 - Building a Large Annotated Corpus of English The .pdf:application/pdf}
+}
+
+@misc{honnibal_spacy_2017,
+	title = {{spaCy} 2: {Natural} language understanding with {Bloom} embeddings, convolutional neural networks and incremental parsing},
+	url = {https://spacy.io/},
+	abstract = {spaCy is a free open-source library for Natural Language Processing in Python. It features NER, POS tagging, dependency parsing, word vectors and more.},
+	author = {Honnibal, Matthew and Montani, Ines},
+	year = {2017}
+}
+
+@inproceedings{pennington_glove:_2014,
+	title = {{GloVe}: {Global} {Vectors} for {Word} {Representation}},
+	url = {http://www.aclweb.org/anthology/D14-1162},
+	booktitle = {Empirical {Methods} in {Natural} {Language} {Processing} ({EMNLP})},
+	author = {Pennington, Jeffrey and Socher, Richard and Manning, Christopher D.},
+	year = {2014},
+	pages = {1532--1543}
+}
