--- a/Documents/report/main.tex
+++ b/Documents/report/main.tex
@@ -91,22 +91,22 @@
 \fancyhead[LO,RE]{\slshape \leftmark}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \chapter{Introduction}
+\chapter{Introduction}
 
-% % \begin{figure}[tb]
-% % \centering
-% % \includegraphics[width = 0.4\hsize]{./figures/imperial}
-% % \caption{Imperial College Logo. It's nice blue, and the font is quite stylish. But you can choose a different one if you don't like it.}
-% % \label{fig:logo}
-% % \end{figure}
+% \begin{figure}[tb]
+% \centering
+% \includegraphics[width = 0.4\hsize]{./figures/imperial}
+% \caption{Imperial College Logo. It's nice blue, and the font is quite stylish. But you can choose a different one if you don't like it.}
+% \label{fig:logo}
+% \end{figure}
 
-% % Figure~\ref{fig:logo} is an example of a figure. 
+% Figure~\ref{fig:logo} is an example of a figure. 
 
 % We subject our models against the Amazon reviews Dataset (\cite{he_ups_2016}).
 
-% - Talk about the problem definition
-% - talk about what you done
-% - talk about the conclusion
+- Talk about the problem definition
+- talk about what you done
+- talk about the conclusion
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -334,11 +334,12 @@ Seq2seq models have shown to be effective in reponse generation, but is no longe
 Furthermore, the responses produced from a vanilla seq2seq model tends to lack lexical diversity and richness (\cite{serban_hierarchical_2016}, \cite{zhao_learning_2017}, \cite{jiang_why_2018}). There tends to be many causes, but one reason (which we tackle in the paper) is due to the lack of statistical inferencing. The model itself lacks the possibilty of presenting a variety of lexical responses in the decoder, in a manner that a VAE could.
 
 \subsubsection{Variational Context}
+\label{variational_context}
 
 \begin{figure}[!ht]
 	\centering
 	\includegraphics[width=100mm]{diagrams/seq2seqvae.png}
-	\caption{The core structure of the VAE language model - words are represented as embedded vectors (\cite{bowman_generating_2015}). \label{seq2seq_attn}}
+	\caption{The core structure of the VAE language model - words are represented as embedded vectors (\cite{bowman_generating_2015}). \label{vae_seq2seq}}
 \end{figure}
 
 Instead of passing through the last hidden state drom the encoder to the decoder, it is possible to encode the context variable produced from the encoder in the form of gaussian parameters in a similar fashion to how VAEs are designed (\cite{bowman_generating_2015}).  
@@ -531,40 +532,6 @@ We derive the KL Divergence as we no longer measure the distance of our posterio
 
 % Although these models have been used in NMT related problems, sequence generation is often unexplored within NLP. We propose using models that traditionally perform well in NMT problems and adapt them for use with sequence generation problems. 
 
-\section{Data Augmentation}
-
-\begin{figure}[!ht]
-\centering
-\lstinputlisting[language=java]{dataset_1.txt}
-\lstinputlisting[language=python]{dataset_2.txt}
-\caption{A sample review and the augmented data. Note that for each sequence from line 3 onwards has the identity sequence contatenated before it. \label{aug_1}}
-\end{figure}
-
-Spacy is used. The dataset produced has to be augmented in order for the model to process them. 
-
-\subsection{Embeddings}
-
-We use the glove word2vec word embeddings.
-
-\subsection{Review Prepropressing}
-
-The model would be forced to produce the next sentence from the previous sentence. Sentences are split by periods. Tokens are represented as words or individual punctuation marks. Additional tags are introduced. Lowercase. 
-
-ASIN represents item ID. this is split by characters.
-
-\subsection{Polarity Calculation}
-
-This is calculated with:
-
-\begin{equation}
-p = \sigma_{tanh}(\frac{h_{pos} - h_{neg}}{h_{pos} + h_{neg}})
-\end{equation}
-
-The polarity word vector is a sum of the polarity value $p$ and the word vector corresponding to the word "polarity".
-
-\subsection{Implementation}
-
-Built on PyTorch. Models take a considerable amount of time to train, which does not necessarily align with rapid evolution of the implementation. Components are typically built with states in mind such that when running a model, it keeps a state of the source codes at the time of running in its own results container. This allows us to repeat the results using the code produced at the time.
 
 \subsubsection{Weight Initialisation}
 
@@ -603,20 +570,75 @@ A simple approach by \cite{bowman_generating_2015}, it involves adding a variabl
 \subsection{Word Dropout}
 Also proposed by \cite{bowman_generating_2015}, it involves weakening the decoder by removing some conditioning information during training. This is done by randomly replacing a fraction of the conditioned-on word tokens with a generic unknown token UNK, which forces the model to depend on the latent variable $z$ for prediction. This works in a similar fashion to the standard dropout (\cite{srivastava_dropout:_2014}) where connections are dropped between layers of a network, but is applied to the input data of a recurrent cell.
 
-\section{Testing Method}
+\chapter{Experimental Setup}
 
-We benchmark the performance of our model against a regular seq2seq network.
 
-her the data produced corresponds to a fake model or from the dataset. This is not used as a loss function (this would consequently create a generative model).
+\section{Datasets}
 
-We compare the performance of the VAD against two baselines, a seq2seq model described above and the Transformer.
+We subject the models to three different datasets: Amazon Reviews (\cite{he_ups_2016}), Penn TreeBank (\cite{marcus_building_2002}), and OpenSubtitles (\cite{lison_opensubtitles2016:_2016}).
 
-Models are computed on an 4.4GHz intel 3770k with a GTX 1080 with 8GB VRAM.
+\subsection{Amazon Reviews}
 
+\begin{figure}[!ht]
+	\centering
+	\lstinputlisting[language=java]{dataset_1.txt}
+	\lstinputlisting[language=python]{dataset_2.txt}
+	\caption{A sample review and the augmented data. Note that for each sequence from line 3 onwards has the identity sequence contatenated before it. \label{aug_1}}
+	\end{figure}
+
+The Amazon reviews is a raw sided and is used as the primary indicator of the performance of the models. The amazon reviews dataset is composed of reviews of electronic gadgets.
+
+The model would be forced to produce the next sentence from the previous sentence. Sentences are split by periods. Tokens are represented as words or individual punctuation marks. Additional tags are introduced. Lowercase. ASIN represents item ID. this is split by characters.
+
+% talk about tokenisation with SpaCy
+
+Pre-processing includes (1) sentenissation and tokenisation using SpaCy (\cite{honnibal_spacy_2017}); (2) concatenation of sequence conditioning on the input sequences; (3) keeping the top 10K frequent word types af the vocabulary; (4) removing sequences where the "<unk>" tags in the sequences represent a ratio of greater than 0.1; (5), and finally removing sequences that are greater than a length of 60. 
+
+We compute discrete polarity value $p$ with a rounded ratio $p=round(r_{+}/r_{-},2)$. The polarity word vector is a sum of the polarity value $p$ and the word vector corresponding to the word "polarity".
+
+% use GloVe Word embeddings
+
+GloVe Word embeddings (\cite{pennington_glove:_2014}) are used to represent tokens in the dataset, and is also used to determine words to remove. 
+
+% talk about conditioning on the sequences
+
+% talking about vocabulary size
+
+\subsection{OpenSubtitles}
+
+Additionally, we use OpenSubtitles. They are setup in a similar fashion to how the amazon dataset is setup, but does not involve conditioning. GloVe is also used. 
+
+
+\subsection{Penn TreeBank}
+
+% No word embeddings
+% no conditioning
+% preformatted
+
+The Penn Tree-Bank Dataset (\cite{marcus_building_2002}) 
+For quick configuration with the model, we compute initial results with the Penn TreeBank dataset. We used a reduced sample.
+
+\section{Testing Setup}
+
+We compare three neural language models: a baseline model, a VAE Seq2seq (see \ref{variational_context}) and the VAD model. the baseline model represents a encoder-decoder seq2seq network (\cite{serban_hierarchical_2016}) that uses the same architecture base as the VAD but only minimises the standard cross entropy loss (i.e. the BOW loss and KL divergence computations are not computed). We use this approach instead of using a different implementation for two reasons: 1. It is acknowledged earlier that a KL collapse on variational sequential models is effectively equivalent to a RNN language model. (see \ref{optimisation_challenges}) 2. It would be easier to show the disparities on convergence.
+
+All models leverage a bidirectional encoder. For variational models we utilise a linear KL annealing with a step size of $2.5^10-5$ with a threshold of 2000 steps. Dimension sizes for the hidden sizes are 512, with latent sizes being 400. The cross entropy loss, KL loss, and BOW losses are normalised by the sequence length. 
+
+All models use the Adam optimiser with a base learning rate of 0.001. Models are computed on a linux machine with a  4.4GHz intel 3770k with a GTX 1080 with 8GB VRAM, and 32GB RAM.
+
+\subsection{Implementation}
+
+Built on PyTorch. Models take a considerable amount of time to train, which does not necessarily align with rapid evolution of the implementation. Components are typically built with states in mind such that when running a model, it keeps a state of the source codes at the time of running in its own results container. This allows us to repeat the results using the code produced at the time.
+
+% here the data produced corresponds to a fake model or from the dataset. This is not used as a loss function (this would consequently create a generative model).
+
+
+- nll loss is normalised by the output
+- average bleu loss 
 
 \subsection{Measuring Performance}
 
-
+Talk about it being infeasible to cherrypick responses used for classification so we take the mean output and comptue bleu and rouge.
 
 To understand the quality of our models, we subject them to the BLEU (\cite{papineni_bleu:_2001}) and ROUGE (\cite{lin_rouge:_2004}) emperical scores at each epoch to quantify the quality of our responses. These measurements are used alongside the Loss, and human analysis of the results.
 
@@ -648,16 +670,98 @@ Additionally, we use BLEU to measure the precision performance, i.e. how much th
 
 Naturally - these results are complementing, as is often the case in precision vs recall. If you have many words from the system results appearing in the human references you will have high Bleu, and if you have many words from the human references appearing in the system results you will have high Rouge."
 
+we also do F1
 
+
+\chapter{Experimental Results}
 % http://opennmt.net OPENMNT-Py has BLEU/ROUGE on it.
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \chapter{Experimental Results}
 
-% \chapter{Future Work}
+\section{NLL Loss}
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=150mm]{results/nll.pdf}
+	\caption{An abstracted model architecture for a variational autoencoder, which takes as input some text, and it's predicted output being the same text as the input.\label{r:nll}}
+  \end{figure}
+
+% what is it? how is it measured? what does it say
+Typically, the vanilla seq2seq model was expected to converge faster than the other models as there are less variables to optimise. 
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vulputate neque at libero faucibus, at ullamcorper turpis tristique. Aliquam erat volutpat. Aenean euismod elit sit amet sodales euismod. Donec nunc nunc, mollis in pellentesque ut, dictum sed dui. Suspendisse egestas lacus magna, ac consequat turpis porta ut. Morbi volutpat interdum lorem eu ultricies. Quisque rutrum, tortor et gravida porttitor, lectus est pharetra sapien, at aliquet mauris mauris ac magna. 
+
+\section{KL Loss}
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=150mm]{results/kl_loss.pdf}
+	\caption{An abstracted model architecture for a variational autoencoder, which takes as input some text, and it's predicted output being the same text as the input.\label{r:kl_loss}}
+	\end{figure}
+	
+
+% what is it? how is it measured? what does it say
+Donec vitae urna ornare, porta diam cursus, gravida nunc. Sed quis massa id orci bibendum molestie at vitae eros. Pellentesque non suscipit nibh, sed venenatis arcu. Curabitur eget imperdiet tellus. Donec in faucibus massa, ac aliquam enim. Aliquam ultrices, nibh egestas varius condimentum, lacus dui consectetur massa, vestibulum auctor risus justo sit amet elit. Sed congue urna nulla, ut cursus augue fringilla in. Vivamus molestie, ipsum eu commodo tempus, lorem metus tempor odio, non mollis lacus tortor sed augue. Praesent aliquam cursus consectetur.
+
+\section{KL Ratio}
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=150mm]{results/kl_ratio.pdf}
+	\caption{An abstracted model architecture for a variational autoencoder, which takes as input some text, and it's predicted output being the same text as the input.\label{r:kl_ratio}}
+  \end{figure}
+
+
+% what is it? how is it measured? what does it say
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vulputate neque at libero faucibus, at ullamcorper turpis tristique. Aliquam erat volutpat. Aenean euismod elit sit amet sodales euismod. Donec nunc nunc, mollis in pellentesque ut, dictum sed dui. Suspendisse egestas lacus magna, ac consequat turpis porta ut. 
+
+
+\section{BLEU and Rouge}
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=150mm]{results/bleu1.pdf}
+	\includegraphics[width=150mm]{results/rouge_1.pdf}
+	\caption{An abstracted model architecture for a variational autoencoder, which takes as input some text, and it's predicted output being the same text as the input.\label{r:bleu_rouge}}
+  \end{figure}
+
+
+% what is it? how is it measured? what does it say
+
+
+
+\section{F1}
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=150mm]{results/f1.pdf}
+	\caption{An abstracted model architecture for a variational autoencoder, which takes as input some text, and it's predicted output being the same text as the input.\label{r:f1}}
+  \end{figure}
+
+
+% what is it? how is it measured? what does it say
+
+
+\section{Sampling Examples}
+
+
+\section{Output Variance}
+
+\chapter{Future Work}
+
+- use nn to classify performance of outputs to detect realisticness of data
+- apply to gan to improve model performance
+- more measurements
+- bayesian optimisation
+- BLEU/ROUGE against the most optimal solution but requires extensive memory usage.
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \chapter{Conclusion}
+\chapter{Conclusion}
+
+- kl loss is difficult
+- vad has more kl weight
+- outputs are more varied with vad
+- regular vaes on seq2seq networks are great but requires lots of hyperparameter tuning
 
 
 %% bibliography
