--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -624,3 +624,90 @@
 	year = {2014},
 	pages = {1532--1543}
 }
+
+@article{kingma_adam:_2014,
+	title = {Adam: {A} {Method} for {Stochastic} {Optimization}},
+	shorttitle = {Adam},
+	url = {https://arxiv.org/abs/1412.6980v9},
+	abstract = {We introduce Adam, an algorithm for first-order gradient-based optimization
+of stochastic objective functions, based on adaptive estimates of lower-order
+moments. The method is straightforward to implement, is computationally
+efficient, has little memory requirements, is invariant to diagonal rescaling
+of the gradients, and is well suited for problems that are large in terms of
+data and/or parameters. The method is also appropriate for non-stationary
+objectives and problems with very noisy and/or sparse gradients. The
+hyper-parameters have intuitive interpretations and typically require little
+tuning. Some connections to related algorithms, on which Adam was inspired, are
+discussed. We also analyze the theoretical convergence properties of the
+algorithm and provide a regret bound on the convergence rate that is comparable
+to the best known results under the online convex optimization framework.
+Empirical results demonstrate that Adam works well in practice and compares
+favorably to other stochastic optimization methods. Finally, we discuss AdaMax,
+a variant of Adam based on the infinity norm.},
+	language = {en},
+	urldate = {2019-04-23},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	month = dec,
+	year = {2014},
+	file = {Full Text PDF:/Users/t/Zotero/storage/D3CH47XB/Kingma and Ba - 2014 - Adam A Method for Stochastic Optimization.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/LT4HUVZQ/1412.html:text/html}
+}
+
+@misc{gpyopt_authors_gpyopt:_2016,
+	title = {{GPyOpt}: {A} {Bayesian} {Optimization} framework in python},
+	url = {http://github.com/SheffieldML/GPyOpt},
+	abstract = {A Bayesian Optimization framework in python, from the University of Sheffield.},
+	journal = {GPyOpt},
+	author = {{GPyOpt authors}},
+	year = {2016}
+}
+
+@phdthesis{kovalenko_controllable_2017,
+	title = {Controllable text generation},
+	url = {http://cs229.stanford.edu/proj2017/final-reports/5244223.pdf},
+	abstract = {In last few years generative models advanced greatly in the visual domain.
+Proposed solutions to problems like image generation and interpretable image
+representation learning achieve very impressive results and advance quickly. Unlike the tasks of text generation. Text generation is a challenging task. Test
+samples are discrete and as a result are non-differentiable. This doesnt allow
+the use of global discriminator, which are common in the visual domain. For
+example in generative adversarial networks used for image generation. An alternative is a variational autoencoder with element-wise reconstruction loss, but
+this approach loses the ability to assess generated sentence as a whole. For
+controllable text generation, one more challenge is learning disentangled latent
+representation. Varying individual elements of latent representation can cause
+unpredictable results in the generated sample.
+In my project, I work on model described in paper ”Toward Controllable
+Text Generation”. The paper proposes a model that addresses issues stated
+above. The model is variational autoencoder with an extended wake-sleep procedure and structured latent representation, consisting of vector sampled from
+prior distribution and attributes used for imposing desired semantic properties.
+Each attribute has dedicated discriminator, which makes learning model, which
+produces text samples with desired semantic properties possible.},
+	language = {en},
+	school = {Stanford University},
+	author = {Kovalenko, Boris},
+	year = {2017},
+	file = {Kovalenko - Controllable text generation.pdf:/Users/t/Zotero/storage/Z645FIQP/Kovalenko - Controllable text generation.pdf:application/pdf}
+}
+
+@misc{kovalenko_controllable_2017-1,
+	title = {Controllable text generation},
+	url = {http://cs229.stanford.edu/proj2017/final-posters/5147211.pdf},
+	abstract = {In last few years generative models advanced greatly in the visual domain.
+Proposed solutions to problems like image generation and interpretable image
+representation learning achieve very impressive results and advance quickly. Unlike the tasks of text generation. Text generation is a challenging task. Test
+samples are discrete and as a result are non-differentiable. This doesnt allow
+the use of global discriminator, which are common in the visual domain. For
+example in generative adversarial networks used for image generation. An alternative is a variational autoencoder with element-wise reconstruction loss, but
+this approach loses the ability to assess generated sentence as a whole. For
+controllable text generation, one more challenge is learning disentangled latent
+representation. Varying individual elements of latent representation can cause
+unpredictable results in the generated sample.
+In my project, I work on model described in paper ”Toward Controllable
+Text Generation”. The paper proposes a model that addresses issues stated
+above. The model is variational autoencoder with an extended wake-sleep procedure and structured latent representation, consisting of vector sampled from
+prior distribution and attributes used for imposing desired semantic properties.
+Each attribute has dedicated discriminator, which makes learning model, which
+produces text samples with desired semantic properties possible.},
+	language = {en},
+	author = {Kovalenko, Boris},
+	year = {2017},
+	file = {Kovalenko - Controllable text generation.pdf:/Users/t/Zotero/storage/XUAIKGJD/Kovalenko - Controllable text generation.pdf:application/pdf}
+}
