--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -276,24 +276,6 @@
 	file = {Snapshot:/Users/t/Zotero/storage/BBEJG963/Le - 2018 - Recurrent Neural Networks The Powerhouse of Langu.html:text/html}
 }
 
-@inproceedings{he_ups_2016,
-	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
-	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
-	isbn = {978-1-4503-4143-1},
-	shorttitle = {Ups and {Downs}},
-	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
-	doi = {10.1145/2872427.2883037},
-	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
-	language = {en},
-	urldate = {2019-01-14},
-	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
-	publisher = {ACM Press},
-	author = {He, Ruining and McAuley, Julian},
-	year = {2016},
-	pages = {507--517},
-	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/S6P3GMIZ/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
-}
-
 @inproceedings{mcauley_image-based_2015,
 	address = {Santiago, Chile},
 	title = {Image-{Based} {Recommendations} on {Styles} and {Substitutes}},
@@ -311,13 +293,14 @@
 	file = {McAuley et al. - 2015 - Image-Based Recommendations on Styles and Substitu.pdf:/Users/t/Zotero/storage/4FW9E8EQ/McAuley et al. - 2015 - Image-Based Recommendations on Styles and Substitu.pdf:application/pdf}
 }
 
-@book{jurafsky_speech_nodate,
+@book{jurafsky_speech_2019,
 	edition = {3},
 	title = {Speech and {Language} {Processing}},
 	url = {https://web.stanford.edu/~jurafsky/slp3/ed3book.pdf},
 	abstract = {An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition.},
 	urldate = {2019-01-09},
 	author = {Jurafsky, Daniel and Martin, James},
+	year = {2019},
 	file = {ed3book.pdf:/Users/t/Zotero/storage/DP5U952Q/ed3book.pdf:application/pdf}
 }
 
@@ -531,43 +514,7 @@
 	file = {Snapshot:/Users/t/Zotero/storage/LWFICYPQ/9780596516499.html:text/html}
 }
 
-@inproceedings{he_ups_2016-1,
-	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
-	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
-	isbn = {978-1-4503-4143-1},
-	shorttitle = {Ups and {Downs}},
-	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
-	doi = {10.1145/2872427.2883037},
-	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
-	language = {en},
-	urldate = {2019-04-15},
-	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
-	publisher = {ACM Press},
-	author = {He, Ruining and McAuley, Julian},
-	year = {2016},
-	pages = {507--517},
-	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/V5VDVX44/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
-}
-
-@inproceedings{he_ups_2016-2,
-	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
-	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
-	isbn = {978-1-4503-4143-1},
-	shorttitle = {Ups and {Downs}},
-	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
-	doi = {10.1145/2872427.2883037},
-	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
-	language = {en},
-	urldate = {2019-04-15},
-	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
-	publisher = {ACM Press},
-	author = {He, Ruining and McAuley, Julian},
-	year = {2016},
-	pages = {507--517},
-	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/BT8LC864/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
-}
-
-@inproceedings{he_ups_2016-3,
+@inproceedings{he_ups_2016,
 	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
 	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
 	isbn = {978-1-4503-4143-1},
@@ -710,4 +657,98 @@ produces text samples with desired semantic properties possible.},
 	author = {Kovalenko, Boris},
 	year = {2017},
 	file = {Kovalenko - Controllable text generation.pdf:/Users/t/Zotero/storage/XUAIKGJD/Kovalenko - Controllable text generation.pdf:application/pdf}
+}
+
+@article{e._rumelhart_learning_1986,
+	title = {Learning {Internal} {Representations} by {Error} {Propagation}},
+	volume = {1},
+	doi = {10.1016/B978-1-4832-1446-7.50035-2},
+	journal = {Parallel Distributed Processing: Explorations in the Microstructure of Cognition},
+	author = {E. Rumelhart, D and H. Hinton, G and RJ, Williams},
+	month = jul,
+	year = {1986}
+}
+
+@article{fu*_cyclical_2019,
+	title = {Cyclical {Annealing} {Schedule}: {A} {Simple} {Approach} to {Mitigating} {KL} {Vanishing}},
+	shorttitle = {Cyclical {Annealing} {Schedule}},
+	url = {https://arxiv.org/abs/1903.10145v1},
+	abstract = {Variational autoencoders (VAEs) with an auto-regressive decoder have been
+applied for many natural language processing (NLP) tasks. The VAE objective
+consists of two terms, (i) reconstruction and (ii) KL regularization, balanced
+by a weighting hyper-parameter β. One notorious training difficulty is that
+the KL term tends to vanish. In this paper we study scheduling schemes for
+β, and show that KL vanishing is caused by the lack of good latent codes in
+training the decoder at the beginning of optimization.
+  To remedy this, we propose a cyclical annealing schedule, which repeats the
+process of increasing βmultiple times. This new procedure allows the
+progressive learning of more meaningful latent codes, by leveraging the
+informative representations of previous cycles as warm re-starts. The
+effectiveness of cyclical annealing is validated on a broad range of NLP tasks,
+including language modeling, dialog response generation and unsupervised
+language pre-training.},
+	language = {en},
+	urldate = {2019-04-24},
+	author = {Fu*, Hao and Li*, Chunyuan and Liu, Xiaodong and Gao, Jianfeng and Celikyilmaz, Asli and Carin, Lawrence},
+	month = mar,
+	year = {2019},
+	file = {Full Text PDF:/Users/t/Zotero/storage/8CP6PM8K/Fu et al. - 2019 - Cyclical Annealing Schedule A Simple Approach to .pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/7WM5BMS6/1903.html:text/html}
+}
+
+@inproceedings{glorot_understanding_2010,
+	title = {Understanding the difficulty of training deep feedforward neural networks},
+	url = {http://proceedings.mlr.press/v9/glorot10a.html},
+	abstract = {Whereas before 2006 it appears that deep multi-layer neural networks were not successfully trained, since then several algorithms have been shown to successfully train them, with experimental resul...},
+	language = {en},
+	urldate = {2019-04-24},
+	booktitle = {Proceedings of the {Thirteenth} {International} {Conference} on {Artificial} {Intelligence} and {Statistics}},
+	author = {Glorot, Xavier and Bengio, Yoshua},
+	month = mar,
+	year = {2010},
+	pages = {249--256},
+	file = {Full Text PDF:/Users/t/Zotero/storage/CB58KQVG/Glorot and Bengio - 2010 - Understanding the difficulty of training deep feed.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/82MCEX8K/glorot10a.html:text/html}
+}
+
+@inproceedings{kannan_smart_2016,
+	address = {San Francisco, California, USA},
+	title = {Smart {Reply}: {Automated} {Response} {Suggestion} for {Email}},
+	isbn = {978-1-4503-4232-2},
+	shorttitle = {Smart {Reply}},
+	url = {http://dl.acm.org/citation.cfm?doid=2939672.2939801},
+	doi = {10.1145/2939672.2939801},
+	abstract = {In this paper we propose and investigate a novel end-to-end method for automatically generating short email responses, called Smart Reply. It generates semantically diverse suggestions that can be used as complete email responses with just one tap on mobile. The system is currently used in Inbox by Gmail and is responsible for assisting with 10\% of all mobile responses. It is designed to work at very high throughput and process hundreds of millions of messages daily. The system exploits state-of-the-art, large-scale deep learning.},
+	language = {en},
+	urldate = {2019-04-24},
+	booktitle = {Proceedings of the 22nd {ACM} {SIGKDD} {International} {Conference} on {Knowledge} {Discovery} and {Data} {Mining} - {KDD} '16},
+	publisher = {ACM Press},
+	author = {Kannan, Anjuli and Young, Peter and Ramavajjala, Vivek and Kurach, Karol and Ravi, Sujith and Kaufmann, Tobias and Tomkins, Andrew and Miklos, Balint and Corrado, Greg and Lukacs, Laszlo and Ganea, Marina},
+	year = {2016},
+	pages = {955--964},
+	file = {Kannan et al. - 2016 - Smart Reply Automated Response Suggestion for Ema.pdf:/Users/t/Zotero/storage/ULBYTHRH/Kannan et al. - 2016 - Smart Reply Automated Response Suggestion for Ema.pdf:application/pdf}
+}
+
+@article{nallapati_summarunner_2016,
+	title = {{SummaRuNNer} - {A} {Recurrent} {Neural} {Network} based {Sequence} {Model} for {Extractive} {Summarization} of {Documents}},
+	shorttitle = {{SummaRuNNer}},
+	url = {https://arxiv.org/abs/1611.04230v1},
+	abstract = {We present SummaRuNNer, a Recurrent Neural Network (RNN) based sequence model
+for extractive summarization of documents and show that it achieves performance
+better than or comparable to state-of-the-art. Our model has the additional
+advantage of being very interpretable, since it allows visualization of its
+predictions broken up by abstract features such as information content,
+salience and novelty. Another novel contribution of our work is abstractive
+training of our extractive model that can train on human generated reference
+summaries alone, eliminating the need for sentence-level extractive labels.},
+	language = {en},
+	urldate = {2019-04-24},
+	author = {Nallapati, Ramesh and Zhai, Feifei and Zhou, Bowen},
+	year = {2016},
+	file = {Full Text PDF:/Users/t/Zotero/storage/C6DSKUXP/Nallapati et al. - 2016 - SummaRuNNer A Recurrent Neural Network based Sequ.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/RPXSHYM8/1611.html:text/html}
+}
+
+@article{noauthor_cs546:learning_nodate,
+	title = {{CS}546:{Learning} and {NLP}   {Lec} 6: {Ngrams} and {Backoff} {Models}},
+	language = {en},
+	pages = {45},
+	file = {CS546Learning and NLP   Lec 6 Ngrams and Backoff.pdf:/Users/t/Zotero/storage/HI3MAWJ5/CS546Learning and NLP   Lec 6 Ngrams and Backoff.pdf:application/pdf}
 }
