--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -251,18 +251,6 @@
 	note = {original-date: 2017-02-06T11:32:46Z}
 }
 
-@misc{noauthor_seq2seq_2017,
-	title = {Seq2Seq with {Attention} and {Beam} {Search}},
-	url = {https://guillaumegenthial.github.io/sequence-to-sequence.html},
-	abstract = {Sequence to Sequence basics for Neural Machine Translation using Attention and Beam Search},
-	language = {en},
-	urldate = {2019-01-10},
-	journal = {Guillaume Genthial blog},
-	month = nov,
-	year = {2017},
-	file = {Snapshot:/Users/t/Zotero/storage/BT9PVEXS/2017 - Seq2Seq with Attention and Beam Search.html:text/html}
-}
-
 @misc{le_recurrent_2018,
 	title = {Recurrent {Neural} {Networks}: {The} {Powerhouse} of {Language} {Modeling}},
 	shorttitle = {Recurrent {Neural} {Networks}},
@@ -751,4 +739,17 @@ summaries alone, eliminating the need for sentence-level extractive labels.},
 	language = {en},
 	pages = {45},
 	file = {CS546Learning and NLP   Lec 6 Ngrams and Backoff.pdf:/Users/t/Zotero/storage/HI3MAWJ5/CS546Learning and NLP   Lec 6 Ngrams and Backoff.pdf:application/pdf}
+}
+
+@misc{genthial_seq2seq_2017,
+	title = {Seq2Seq with {Attention} and {Beam} {Search}},
+	url = {https://guillaumegenthial.github.io/sequence-to-sequence.html},
+	abstract = {Sequence to Sequence basics for Neural Machine Translation using Attention and Beam Search},
+	language = {en},
+	urldate = {2019-04-27},
+	journal = {Guillaume Genthial blog},
+	author = {Genthial, Guillaume},
+	month = nov,
+	year = {2017},
+	file = {Snapshot:/Users/t/Zotero/storage/TUULMIUZ/sequence-to-sequence.html:text/html}
 }
