--- a/Documents/report/main.bib
+++ b/Documents/report/main.bib
@@ -251,18 +251,6 @@
 	note = {original-date: 2017-02-06T11:32:46Z}
 }
 
-@misc{noauthor_seq2seq_2017,
-	title = {Seq2Seq with {Attention} and {Beam} {Search}},
-	url = {https://guillaumegenthial.github.io/sequence-to-sequence.html},
-	abstract = {Sequence to Sequence basics for Neural Machine Translation using Attention and Beam Search},
-	language = {en},
-	urldate = {2019-01-10},
-	journal = {Guillaume Genthial blog},
-	month = nov,
-	year = {2017},
-	file = {Snapshot:/Users/t/Zotero/storage/BT9PVEXS/2017 - Seq2Seq with Attention and Beam Search.html:text/html}
-}
-
 @misc{le_recurrent_2018,
 	title = {Recurrent {Neural} {Networks}: {The} {Powerhouse} of {Language} {Modeling}},
 	shorttitle = {Recurrent {Neural} {Networks}},
@@ -274,24 +262,6 @@
 	month = sep,
 	year = {2018},
 	file = {Snapshot:/Users/t/Zotero/storage/BBEJG963/Le - 2018 - Recurrent Neural Networks The Powerhouse of Langu.html:text/html}
-}
-
-@inproceedings{he_ups_2016,
-	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
-	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
-	isbn = {978-1-4503-4143-1},
-	shorttitle = {Ups and {Downs}},
-	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
-	doi = {10.1145/2872427.2883037},
-	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
-	language = {en},
-	urldate = {2019-01-14},
-	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
-	publisher = {ACM Press},
-	author = {He, Ruining and McAuley, Julian},
-	year = {2016},
-	pages = {507--517},
-	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/S6P3GMIZ/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
 }
 
 @inproceedings{mcauley_image-based_2015,
@@ -311,13 +281,14 @@
 	file = {McAuley et al. - 2015 - Image-Based Recommendations on Styles and Substitu.pdf:/Users/t/Zotero/storage/4FW9E8EQ/McAuley et al. - 2015 - Image-Based Recommendations on Styles and Substitu.pdf:application/pdf}
 }
 
-@book{jurafsky_speech_nodate,
+@book{jurafsky_speech_2019,
 	edition = {3},
 	title = {Speech and {Language} {Processing}},
 	url = {https://web.stanford.edu/~jurafsky/slp3/ed3book.pdf},
 	abstract = {An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition.},
 	urldate = {2019-01-09},
 	author = {Jurafsky, Daniel and Martin, James},
+	year = {2019},
 	file = {ed3book.pdf:/Users/t/Zotero/storage/DP5U952Q/ed3book.pdf:application/pdf}
 }
 
@@ -492,15 +463,6 @@
 	file = {IEEE Xplore Abstract Record:/Users/t/Zotero/storage/NA6ZHGG6/6795228.html:text/html}
 }
 
-@article{lin_rouge:_nodate,
-	title = {{ROUGE}: {A} {Package} for {Automatic} {Evaluation} of {Summaries}},
-	abstract = {ROUGE stands for Recall-Oriented Understudy for Gisting Evaluation. It includes measures to automatically determine the quality of a summary by comparing it to other (ideal) summaries created by humans. The measures count the number of overlapping units such as n-gram, word sequences, and word pairs between the computer-generated summary to be evaluated and the ideal summaries created by humans. This paper introduces four different ROUGE measures: ROUGE-N, ROUGE-L, ROUGE-W, and ROUGE-S included in the ROUGE summarization evaluation package and their evaluatio ns. Three of them have been used in the Document Understanding Conference (DUC) 2004, a large-scale summarization evaluation sponsored by NIST.},
-	language = {en},
-	author = {Lin, Chin-Yew},
-	pages = {8},
-	file = {Lin - ROUGE A Package for Automatic Evaluation of Summa.pdf:/Users/t/Zotero/storage/DH7FLSM8/Lin - ROUGE A Package for Automatic Evaluation of Summa.pdf:application/pdf}
-}
-
 @inproceedings{papineni_bleu:_2001,
 	address = {Philadelphia, Pennsylvania},
 	title = {{BLEU}: a method for automatic evaluation of machine translation},
@@ -515,4 +477,279 @@
 	year = {2001},
 	pages = {311},
 	file = {Papineni et al. - 2001 - BLEU a method for automatic evaluation of machine.pdf:/Users/t/Zotero/storage/T6JI7WRI/Papineni et al. - 2001 - BLEU a method for automatic evaluation of machine.pdf:application/pdf}
+}
+
+@inproceedings{lin_rouge:_2004,
+	title = {{ROUGE}: {A} {Package} for {Automatic} {Evaluation} of {Summaries}},
+	shorttitle = {{ROUGE}},
+	url = {https://aclweb.org/anthology/papers/W/W04/W04-1013/},
+	language = {en-us},
+	urldate = {2019-04-13},
+	author = {Lin, Chin-Yew},
+	year = {2004},
+	pages = {74--81},
+	file = {Full Text PDF:/Users/t/Zotero/storage/KLU7HHJC/Lin - 2004 - ROUGE A Package for Automatic Evaluation of Summa.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/BTZ799GI/W04-1013.html:text/html}
+}
+
+@book{loper_natural_nodate,
+	title = {Natural {Language} {Processing} with {Python}},
+	isbn = {978-0-596-51649-9},
+	url = {http://shop.oreilly.com/product/9780596516499.do},
+	abstract = {This book offers a highly accessible introduction to Natural Language Processing, the field that underpins a variety of language technologies ranging from predictive text and email filtering to automatic summarization and translation. You'll learn...},
+	language = {en},
+	urldate = {2019-04-15},
+	author = {Loper, Ewan Klein, Edward, Steven Bird},
+	file = {Snapshot:/Users/t/Zotero/storage/LWFICYPQ/9780596516499.html:text/html}
+}
+
+@inproceedings{he_ups_2016,
+	address = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
+	title = {Ups and {Downs}: {Modeling} the {Visual} {Evolution} of {Fashion} {Trends} with {One}-{Class} {Collaborative} {Filtering}},
+	isbn = {978-1-4503-4143-1},
+	shorttitle = {Ups and {Downs}},
+	url = {http://dl.acm.org/citation.cfm?doid=2872427.2883037},
+	doi = {10.1145/2872427.2883037},
+	abstract = {Building a successful recommender system depends on understanding both the dimensions of people’s preferences as well as their dynamics. In certain domains, such as fashion, modeling such preferences can be incredibly difﬁcult, due to the need to simultaneously model the visual appearance of products as well as their evolution over time. The subtle semantics and non-linear dynamics of fashion evolution raise unique challenges especially considering the sparsity and large scale of the underlying datasets. In this paper we build novel models for the One-Class Collaborative Filtering setting, where our goal is to estimate users’ fashion-aware personalized ranking functions based on their past feedback. To uncover the complex and evolving visual factors that people consider when evaluating products, our method combines high-level visual features extracted from a deep convolutional neural network, users’ past feedback, as well as evolving trends within the community. Experimentally we evaluate our method on two large real-world datasets from Amazon.com, where we show it to outperform stateof-the-art personalized ranking measures, and also use it to visualize the high-level fashion trends across the 11-year span of our dataset.},
+	language = {en},
+	urldate = {2019-04-15},
+	booktitle = {Proceedings of the 25th {International} {Conference} on {World} {Wide} {Web} - {WWW} '16},
+	publisher = {ACM Press},
+	author = {He, Ruining and McAuley, Julian},
+	year = {2016},
+	pages = {507--517},
+	file = {He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:/Users/t/Zotero/storage/ZPIPSRI9/He and McAuley - 2016 - Ups and Downs Modeling the Visual Evolution of Fa.pdf:application/pdf}
+}
+
+@article{lison_opensubtitles2016:_2016,
+	title = {{OpenSubtitles}2016: {Extracting} {Large} {Parallel} {Corpora} from {Movie} and {TV} {Subtitles}},
+	abstract = {We present a new major release of the OpenSubtitles collection of parallel corpora. The release is compiled from a large database of movie and TV subtitles and includes a total of 1689 bitexts spanning 2.6 billion sentences across 60 languages. The release also incorporates a number of enhancements in the preprocessing and alignment of the subtitles, such as the automatic correction of OCR errors and the use of meta-data to estimate the quality of each subtitle and score subtitle pairs.},
+	language = {en},
+	author = {Lison, Pierre and Tiedemann, Jorg},
+	year = {2016},
+	pages = {7},
+	file = {Lison and Tiedemann - OpenSubtitles2016 Extracting Large Parallel Corpo.pdf:/Users/t/Zotero/storage/S3E2FQCQ/Lison and Tiedemann - OpenSubtitles2016 Extracting Large Parallel Corpo.pdf:application/pdf}
+}
+
+@article{marcus_building_2002,
+	title = {Building a {Large} {Annotated} {Corpus} of {English}: {The} {Penn} {Treebank}},
+	volume = {19},
+	shorttitle = {Building a {Large} {Annotated} {Corpus} of {English}},
+	abstract = {The abstract for this document is available on CSA Illumina.To view the Abstract, click the Abstract button above the document title.},
+	journal = {Computational Linguistics},
+	author = {Marcus, Mitchell and Ann Marcinkiewicz, Mary and Santorini, Beatrice},
+	month = jul,
+	year = {2002},
+	pages = {313--330},
+	file = {Full Text PDF:/Users/t/Zotero/storage/RFQD4XIN/Marcus et al. - 2002 - Building a Large Annotated Corpus of English The .pdf:application/pdf}
+}
+
+@misc{honnibal_spacy_2017,
+	title = {{spaCy} 2: {Natural} language understanding with {Bloom} embeddings, convolutional neural networks and incremental parsing},
+	url = {https://spacy.io/},
+	abstract = {spaCy is a free open-source library for Natural Language Processing in Python. It features NER, POS tagging, dependency parsing, word vectors and more.},
+	author = {Honnibal, Matthew and Montani, Ines},
+	year = {2017}
+}
+
+@inproceedings{pennington_glove:_2014,
+	title = {{GloVe}: {Global} {Vectors} for {Word} {Representation}},
+	url = {http://www.aclweb.org/anthology/D14-1162},
+	booktitle = {Empirical {Methods} in {Natural} {Language} {Processing} ({EMNLP})},
+	author = {Pennington, Jeffrey and Socher, Richard and Manning, Christopher D.},
+	year = {2014},
+	pages = {1532--1543}
+}
+
+@article{kingma_adam:_2014,
+	title = {Adam: {A} {Method} for {Stochastic} {Optimization}},
+	shorttitle = {Adam},
+	url = {https://arxiv.org/abs/1412.6980v9},
+	abstract = {We introduce Adam, an algorithm for first-order gradient-based optimization
+of stochastic objective functions, based on adaptive estimates of lower-order
+moments. The method is straightforward to implement, is computationally
+efficient, has little memory requirements, is invariant to diagonal rescaling
+of the gradients, and is well suited for problems that are large in terms of
+data and/or parameters. The method is also appropriate for non-stationary
+objectives and problems with very noisy and/or sparse gradients. The
+hyper-parameters have intuitive interpretations and typically require little
+tuning. Some connections to related algorithms, on which Adam was inspired, are
+discussed. We also analyze the theoretical convergence properties of the
+algorithm and provide a regret bound on the convergence rate that is comparable
+to the best known results under the online convex optimization framework.
+Empirical results demonstrate that Adam works well in practice and compares
+favorably to other stochastic optimization methods. Finally, we discuss AdaMax,
+a variant of Adam based on the infinity norm.},
+	language = {en},
+	urldate = {2019-04-23},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	month = dec,
+	year = {2014},
+	file = {Full Text PDF:/Users/t/Zotero/storage/D3CH47XB/Kingma and Ba - 2014 - Adam A Method for Stochastic Optimization.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/LT4HUVZQ/1412.html:text/html}
+}
+
+@misc{gpyopt_authors_gpyopt:_2016,
+	title = {{GPyOpt}: {A} {Bayesian} {Optimization} framework in python},
+	url = {http://github.com/SheffieldML/GPyOpt},
+	abstract = {A Bayesian Optimization framework in python, from the University of Sheffield.},
+	journal = {GPyOpt},
+	author = {{GPyOpt authors}},
+	year = {2016}
+}
+
+@phdthesis{kovalenko_controllable_2017,
+	title = {Controllable text generation},
+	url = {http://cs229.stanford.edu/proj2017/final-reports/5244223.pdf},
+	abstract = {In last few years generative models advanced greatly in the visual domain.
+Proposed solutions to problems like image generation and interpretable image
+representation learning achieve very impressive results and advance quickly. Unlike the tasks of text generation. Text generation is a challenging task. Test
+samples are discrete and as a result are non-differentiable. This doesnt allow
+the use of global discriminator, which are common in the visual domain. For
+example in generative adversarial networks used for image generation. An alternative is a variational autoencoder with element-wise reconstruction loss, but
+this approach loses the ability to assess generated sentence as a whole. For
+controllable text generation, one more challenge is learning disentangled latent
+representation. Varying individual elements of latent representation can cause
+unpredictable results in the generated sample.
+In my project, I work on model described in paper ”Toward Controllable
+Text Generation”. The paper proposes a model that addresses issues stated
+above. The model is variational autoencoder with an extended wake-sleep procedure and structured latent representation, consisting of vector sampled from
+prior distribution and attributes used for imposing desired semantic properties.
+Each attribute has dedicated discriminator, which makes learning model, which
+produces text samples with desired semantic properties possible.},
+	language = {en},
+	school = {Stanford University},
+	author = {Kovalenko, Boris},
+	year = {2017},
+	file = {Kovalenko - Controllable text generation.pdf:/Users/t/Zotero/storage/Z645FIQP/Kovalenko - Controllable text generation.pdf:application/pdf}
+}
+
+@misc{kovalenko_controllable_2017-1,
+	title = {Controllable text generation},
+	url = {http://cs229.stanford.edu/proj2017/final-posters/5147211.pdf},
+	abstract = {In last few years generative models advanced greatly in the visual domain.
+Proposed solutions to problems like image generation and interpretable image
+representation learning achieve very impressive results and advance quickly. Unlike the tasks of text generation. Text generation is a challenging task. Test
+samples are discrete and as a result are non-differentiable. This doesnt allow
+the use of global discriminator, which are common in the visual domain. For
+example in generative adversarial networks used for image generation. An alternative is a variational autoencoder with element-wise reconstruction loss, but
+this approach loses the ability to assess generated sentence as a whole. For
+controllable text generation, one more challenge is learning disentangled latent
+representation. Varying individual elements of latent representation can cause
+unpredictable results in the generated sample.
+In my project, I work on model described in paper ”Toward Controllable
+Text Generation”. The paper proposes a model that addresses issues stated
+above. The model is variational autoencoder with an extended wake-sleep procedure and structured latent representation, consisting of vector sampled from
+prior distribution and attributes used for imposing desired semantic properties.
+Each attribute has dedicated discriminator, which makes learning model, which
+produces text samples with desired semantic properties possible.},
+	language = {en},
+	author = {Kovalenko, Boris},
+	year = {2017},
+	file = {Kovalenko - Controllable text generation.pdf:/Users/t/Zotero/storage/XUAIKGJD/Kovalenko - Controllable text generation.pdf:application/pdf}
+}
+
+@article{e._rumelhart_learning_1986,
+	title = {Learning {Internal} {Representations} by {Error} {Propagation}},
+	volume = {1},
+	doi = {10.1016/B978-1-4832-1446-7.50035-2},
+	journal = {Parallel Distributed Processing: Explorations in the Microstructure of Cognition},
+	author = {E. Rumelhart, D and H. Hinton, G and RJ, Williams},
+	month = jul,
+	year = {1986}
+}
+
+@article{fu*_cyclical_2019,
+	title = {Cyclical {Annealing} {Schedule}: {A} {Simple} {Approach} to {Mitigating} {KL} {Vanishing}},
+	shorttitle = {Cyclical {Annealing} {Schedule}},
+	url = {https://arxiv.org/abs/1903.10145v1},
+	abstract = {Variational autoencoders (VAEs) with an auto-regressive decoder have been
+applied for many natural language processing (NLP) tasks. The VAE objective
+consists of two terms, (i) reconstruction and (ii) KL regularization, balanced
+by a weighting hyper-parameter β. One notorious training difficulty is that
+the KL term tends to vanish. In this paper we study scheduling schemes for
+β, and show that KL vanishing is caused by the lack of good latent codes in
+training the decoder at the beginning of optimization.
+  To remedy this, we propose a cyclical annealing schedule, which repeats the
+process of increasing βmultiple times. This new procedure allows the
+progressive learning of more meaningful latent codes, by leveraging the
+informative representations of previous cycles as warm re-starts. The
+effectiveness of cyclical annealing is validated on a broad range of NLP tasks,
+including language modeling, dialog response generation and unsupervised
+language pre-training.},
+	language = {en},
+	urldate = {2019-04-24},
+	author = {Fu*, Hao and Li*, Chunyuan and Liu, Xiaodong and Gao, Jianfeng and Celikyilmaz, Asli and Carin, Lawrence},
+	month = mar,
+	year = {2019},
+	file = {Full Text PDF:/Users/t/Zotero/storage/8CP6PM8K/Fu et al. - 2019 - Cyclical Annealing Schedule A Simple Approach to .pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/7WM5BMS6/1903.html:text/html}
+}
+
+@inproceedings{glorot_understanding_2010,
+	title = {Understanding the difficulty of training deep feedforward neural networks},
+	url = {http://proceedings.mlr.press/v9/glorot10a.html},
+	abstract = {Whereas before 2006 it appears that deep multi-layer neural networks were not successfully trained, since then several algorithms have been shown to successfully train them, with experimental resul...},
+	language = {en},
+	urldate = {2019-04-24},
+	booktitle = {Proceedings of the {Thirteenth} {International} {Conference} on {Artificial} {Intelligence} and {Statistics}},
+	author = {Glorot, Xavier and Bengio, Yoshua},
+	month = mar,
+	year = {2010},
+	pages = {249--256},
+	file = {Full Text PDF:/Users/t/Zotero/storage/CB58KQVG/Glorot and Bengio - 2010 - Understanding the difficulty of training deep feed.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/82MCEX8K/glorot10a.html:text/html}
+}
+
+@inproceedings{kannan_smart_2016,
+	address = {San Francisco, California, USA},
+	title = {Smart {Reply}: {Automated} {Response} {Suggestion} for {Email}},
+	isbn = {978-1-4503-4232-2},
+	shorttitle = {Smart {Reply}},
+	url = {http://dl.acm.org/citation.cfm?doid=2939672.2939801},
+	doi = {10.1145/2939672.2939801},
+	abstract = {In this paper we propose and investigate a novel end-to-end method for automatically generating short email responses, called Smart Reply. It generates semantically diverse suggestions that can be used as complete email responses with just one tap on mobile. The system is currently used in Inbox by Gmail and is responsible for assisting with 10\% of all mobile responses. It is designed to work at very high throughput and process hundreds of millions of messages daily. The system exploits state-of-the-art, large-scale deep learning.},
+	language = {en},
+	urldate = {2019-04-24},
+	booktitle = {Proceedings of the 22nd {ACM} {SIGKDD} {International} {Conference} on {Knowledge} {Discovery} and {Data} {Mining} - {KDD} '16},
+	publisher = {ACM Press},
+	author = {Kannan, Anjuli and Young, Peter and Ramavajjala, Vivek and Kurach, Karol and Ravi, Sujith and Kaufmann, Tobias and Tomkins, Andrew and Miklos, Balint and Corrado, Greg and Lukacs, Laszlo and Ganea, Marina},
+	year = {2016},
+	pages = {955--964},
+	file = {Kannan et al. - 2016 - Smart Reply Automated Response Suggestion for Ema.pdf:/Users/t/Zotero/storage/ULBYTHRH/Kannan et al. - 2016 - Smart Reply Automated Response Suggestion for Ema.pdf:application/pdf}
+}
+
+@article{nallapati_summarunner_2016,
+	title = {{SummaRuNNer} - {A} {Recurrent} {Neural} {Network} based {Sequence} {Model} for {Extractive} {Summarization} of {Documents}},
+	shorttitle = {{SummaRuNNer}},
+	url = {https://arxiv.org/abs/1611.04230v1},
+	abstract = {We present SummaRuNNer, a Recurrent Neural Network (RNN) based sequence model
+for extractive summarization of documents and show that it achieves performance
+better than or comparable to state-of-the-art. Our model has the additional
+advantage of being very interpretable, since it allows visualization of its
+predictions broken up by abstract features such as information content,
+salience and novelty. Another novel contribution of our work is abstractive
+training of our extractive model that can train on human generated reference
+summaries alone, eliminating the need for sentence-level extractive labels.},
+	language = {en},
+	urldate = {2019-04-24},
+	author = {Nallapati, Ramesh and Zhai, Feifei and Zhou, Bowen},
+	year = {2016},
+	file = {Full Text PDF:/Users/t/Zotero/storage/C6DSKUXP/Nallapati et al. - 2016 - SummaRuNNer A Recurrent Neural Network based Sequ.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/RPXSHYM8/1611.html:text/html}
+}
+
+@article{noauthor_cs546:learning_nodate,
+	title = {{CS}546:{Learning} and {NLP}   {Lec} 6: {Ngrams} and {Backoff} {Models}},
+	language = {en},
+	pages = {45},
+	file = {CS546Learning and NLP   Lec 6 Ngrams and Backoff.pdf:/Users/t/Zotero/storage/HI3MAWJ5/CS546Learning and NLP   Lec 6 Ngrams and Backoff.pdf:application/pdf}
+}
+
+@misc{genthial_seq2seq_2017,
+	title = {Seq2Seq with {Attention} and {Beam} {Search}},
+	url = {https://guillaumegenthial.github.io/sequence-to-sequence.html},
+	abstract = {Sequence to Sequence basics for Neural Machine Translation using Attention and Beam Search},
+	language = {en},
+	urldate = {2019-04-27},
+	journal = {Guillaume Genthial blog},
+	author = {Genthial, Guillaume},
+	month = nov,
+	year = {2017},
+	file = {Snapshot:/Users/t/Zotero/storage/TUULMIUZ/sequence-to-sequence.html:text/html}
 }
